# bevy_shenanigans

./: Cargo.toml
assets/models/: pillar.gltf  pyramid.gltf  pyramid.json  quad.gltf  spaceship.gltf
assets/shaders/: grid.wgsl  skybox.frag  skybox.vert  skybox.wgsl  static_grid.wgsl
src/: grid.rs  main.rs  skybox.rs  utils.rs
src/entities/: camera.rs  environment.rs  mod.rs  ship.rs
src/entities/ship/: input_state.rs  mod.rs
src/materials/: grid.rs  mod.rs  skybox.rs  vignette.rs
src/skybox/: mesh.rs  mod.rs  pipeline.rs  shape.rs
src/utils/: alter_transform_once.rs  local_settings.rs  mod.rs  spawn.rs  wfc.rs
