[package]
name = "race_the_moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "race-the-moon"
path = "src/main.rs"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["dynamic"] }
#bevy = { version = "0.6.0", features = ["dynamic"] }
#bevy = { path = "../bevy", features = [] }
bevy_rapier3d = "0.12.0"
