[package]
name = "race_the_moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "race-the-moon"
path = "src/main.rs"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["dynamic", "serialize"] }
#bevy = { version = "0.6.0", features = ["dynamic"] }
#bevy = { path = "../bevy", features = ["dynamic", "serialize"] }
bevy_easings = "0.6.0"
#bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d" }
bevy_rapier3d = { git = "https://github.com/SpaceTacoCat/bevy_rapier" }
#bevy_mod_debugdump = "0.3.0"
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wfc = "0.10.5"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
#bevy = { path = "../bevy" }
